# mr_cat

./: Cargo.toml  stderr.txt  stdout.txt
src/: main.rs
tests/: integration_tests.rs
